# ocaz

./: LICENSE  README.md  docker-compose.yaml
ocaz/: .gitignore  Dockerfile  load_insight_face.py  pyproject.toml
ocaz-classifier-nsfw-gantman/: Dockerfile  README.md  pyproject.toml
ocaz-classifier-nsfw-gantman/src/ocaz_classifier_nsfw_gantman/: app.py
ocaz-classifier-nsfw-opennsfw2/: .dockerignore  Dockerfile  README.md  pyproject.toml
ocaz-classifier-nsfw-opennsfw2/src/ocaz/classifier/nsfw/opennsfw2/: load_model.py
ocaz-classifier-nsfw-opennsfw2/src/ocaz_classifier_nsfw_opennsfw2/: app.py  load_model.py
ocaz-face-detector-deepface/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
ocaz-face-detector-deepface/src/ocaz_face_detector_deepface/: __init__.py  app.py  const.py  cv_util.py  face_attribute_classifier.py  face_detector.py  face_extractor.py
ocaz-face-detector-deepface/src/sandbox/: detect_retina_face.py
ocaz-face-detector-insightface/: Dockerfile  pyproject.toml
ocaz-face-detector-insightface/src/ocaz_face_detector_insightface/: __init__.py  app.py  const.py  cv_util.py  face_detector.py
ocaz-finder/: Dockerfile  pyproject.toml
ocaz-finder/src/ocaz_finder/: app.py
ocaz-forwarder/: Dockerfile
ocaz-sandbox/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
ocaz-sandbox/src/ocaz_sandbox/: __init__.py  add_url.py  command.py  db.py  forwarder.py  make_index.py  predict_nsfw_gantman.py  predict_nsfw_opennsfw2.py  resolve_head_10mb_sha1.py  resolve_media_meta.py  resolve_object_meta.py  resolve_phash.py  resolve_resolution.py  resolve_sha1.py  scan_nginx.py  stats.py  video_digester.py
ocaz-sandbox/src/ocaz_sandbox/migration/: add_object_created_at.py  add_object_updated_at.py  add_url_created_at.py  add_url_updated_at.py  move_phash_to_image.py
ocaz-simple-browser/: Dockerfile  README.md
ocaz-simple-browser/app/: next.config.js  package-lock.json  package.json
ocaz-simple-browser/app/src/app/: globals.css  layout.js  page.js
ocaz-simple-browser/app/src/app/api/mimeType/: route.js
ocaz-simple-browser/app/src/app/api/objects/: route.js
ocaz-simple-browser/app/src/app/components/: ImageThumbnail.js  ImageThumbnail.module.css  Pagination.js  Pagination.module.css  Preview.js  Preview.module.css  PreviewModal.js  PreviewModal.module.css  Thumbnail.js  Thumbnail.module.css  ThumbnailContainer.js  VideoThumbnail.js  VideoThumbnail.module.css
ocaz-simple-browser/app/src/app/lib/: finder.js
ocaz-simple-browser/app/src/app/test/: page.js
ocaz-terminology/: .gitignore  README.md  docker-compose.yaml
ocaz-terminology/data/tag/: 1697598512.json
ocaz-terminology/data/term/: .gitignore  1697598000.jsonl  1697598000000.jsonl  1697598650.json  1697612400000.jsonl  1697616000000.jsonl  1697619600000.jsonl  1697641200000.jsonl  1697644800000.jsonl  1697648400000.jsonl  1698472800000.jsonl  1698476400000.jsonl  1698480000000.jsonl  1698994800000.jsonl  v0.0.1.jsonl  v0.0.2.jsonl  v0.0.3.jsonl
ocaz-terminology/data/term/fragment/: .gitignore  1697612400000.jsonl  1698458400000.jsonl  1698483600000.jsonl  1699063200000.jsonl  1699376400000.jsonl  1699542000000.jsonl  1699545600000.jsonl  1699668000000.jsonl  1699671600000.jsonl  1699675200000.jsonl  1699970400000.jsonl  1699974000000.jsonl  1700013600000.jsonl  1700017200000.jsonl  1700024400000.jsonl  1700028000000.jsonl  1700031600000.jsonl  1700060400000.jsonl  1700143200000.jsonl  1700146800000.jsonl  1700150400000.jsonl  1700154000000.jsonl  1700298000000.jsonl  1700499600000.jsonl  1700578800000.jsonl  1700582400000.jsonl  1701237600000.jsonl  1701248400000.jsonl  1701356400000.jsonl  1701781200000.jsonl  1701788400000.jsonl  1702040400000.jsonl  1702044000000.jsonl  1702047600000.jsonl  1702051200000.jsonl  1702310400000.jsonl  1702447200000.jsonl  1702476000000.jsonl  1702479600000.jsonl  (+4 more)
ocaz-terminology/editor-server/: .dockerignore  .gitignore  Dockerfile  pyproject.toml  requirements.txt
ocaz-terminology/editor-server/src/ocaz_terminology_editor_server/: pack.py  prepare_translate.py  server.py  stats.py  to_fragment.py
ocaz-terminology/editor-ui/app/: package.json
ocaz-terminology/editor-ui/src/: package-lock.json  package.json  tailwind.config.js
ocaz-terminology/editor-ui/src/app/: layout.js  page.js
ocaz-terminology/sandbox/dolt/: README.md
ocaz-terminology/sandbox/dolt/schema/: terms.sql
ocaz-terminology/sandbox/dolt/tool/: add.py  dump.py  dump_tree.py  insert.py  make_random_id.py
ocaz-terminology/schema/: synonyms.sql
ocaz-terminology/tool/: add.py  dump.py
ocaz-video-digester/: Dockerfile
ocaz/lib/ocaz/: meta.py
ocaz/lib/ocaz/cv/: video.py
ocaz/lib/ocaz/detection/: face.py
ocaz/lib/ocaz/util/: json.py  numpy.py  object.py  path.py
ocaz/test/: test_insightface.py
old/: README.md  docker-compose.dev.yaml
old/ocaz/: .dockerignore  Dockerfile
old/ocaz/lib/ocaz/cv/: video.py
old/ocaz/lib/ocaz/util/: object.py
sandbox/: docker-compose.yaml
sandbox/query/: 00_all.json  01_recent_created.json  01_recently_created.json  02_recently_updated.json  10_image.json  11_image_sfw.json  12_image_nsfw.json  20_video.json  21_video_over5min.json  image.json  video.json
