[project]
name = "ocaz-classifier-nsfw-gantman"
description = ""
readme = "README.md"
requires-python = ">=3.8"
#license = {file = "LICENSE.txt"}
authors = [
  {name = "kleamp1e", email = "kleamp1e@gmail.com" },
]
dependencies = [
  "fastapi~=0.95.0",
  "nsfw-detector @ git+https://github.com/GantMan/nsfw_model.git@1.2.0",
  "python-multipart~=0.0.6",
  "tensorflow~=2.11.0",
  "uvicorn~=0.21.1",
]
dynamic = [
  "version",
]

[project.optional-dependencies]
dev = [
  "black",
  "isort",
]
test = []

[build-system]
requires = [
  "setuptools>=43.0.0",
  "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]

[tool.setuptools.dynamic]
version = {attr = "ocaz.classifier.nsfw.gantman.version"}
