[project]
name = "ocaz-sandbox"
description = ""
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}
authors = [
  {name = "kleamp1e", email = "kleamp1e@gmail.com" },
]
dependencies = [
  "beautifulsoup4~=4.12.2",
  "click~=8.1.3",
  "requests~=2.30.0",
]
dynamic = [
  "version",
]

[project.optional-dependencies]
dev = [
  "pysen[lint]~=0.10.4",
]
test = []

[build-system]
requires = [
  "setuptools>=43.0.0",
  "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]

[tool.setuptools.dynamic]
version = {attr = "ocaz_sandbox.version"}

[tool.pysen]
version = "0.10"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 120
py_version = "py37"

[[tool.pysen.lint.mypy_targets]]
paths = ["."]
