[tool.poetry]
name = "ocaz"
version = "0.2.0"
description = ""
authors = ["kleamp1e"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21.0"
onnxruntime-gpu = "^1.8.1"
pypandoc = "~1.6.4"
insightface = "0.6.2"
protobuf = "~3.20.1"
mxnet = "^1.9.1"
click = "^8.1.3"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
